fixed bug with Swagger.